trying to fix gap between header and body content

--- a/_includes/patterns/header/header.scss
+++ b/_includes/patterns/header/header.scss
@@ -1,3 +1,17 @@
+/* header-fix */
+
+.header__custom{
+    background-color: #002552;
+}
+.header__custom a{
+    color: white;
+}
+
+
+
+
+
+
 .page__header{
     background-color: #002552;
     color: white;
